# HomeBin

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  LICENSE  README.md  bridge.yaml  docker-compose.dev.yml  docker-compose.docs.yml  local.yml  manage.py  nixpacks.toml  poetry-sync.bat  production.yml  pyproject.toml  update_build_number.py
.devcontainer/: devcontainer.json
.envs/.local/: .postgres
.github/workflows/: ci.yml
compose/production/traefik/: traefik.yml
config/: api_router.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
django_menus/: __init__.py
docs/: Makefile  conf.py  howto.rst  index.rst  make.bat  users.rst
homebin/: __init__.py  conftest.py
homebin/assets/: __init__.py  admin.py  apps.py  models.py  tables.py  urls.py  views.py
homebin/assets/migrations/: 0001_initial.py  0002_manufacturer_asset_model_historicalasset_model_and_more.py  0003_manufacturer_slug_alter_manufacturer_name.py  0004_set_manufacturer_slugs.py  0005_asset_location_historicalasset_location.py
homebin/assets/templates/assets/: asset_detail.html
homebin/attachments/: admin.py  apps.py  forms.py  models.py  tables.py
homebin/attachments/migrations/: 0001_initial.py  0001_squashed_0006_alter_attachment_type_and_more.py  0002_alter_attachment_type_and_more.py  0003_alter_attachment_type_and_more.py  0004_alter_attachment_type_and_more.py  0005_alter_attachment_type_and_more.py  0006_alter_attachment_type_and_more.py  0007_move_attachments_to_generic_attachments.py  0008_delete_attachment_and_more.py  0009_alter_genericattachment_attachment_type.py
homebin/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
homebin/django_common_utils/: apps.py  models.py
homebin/helpers/: __init__.py  apps.py  components.py  forms.py  models.py  utils.py  views.py
homebin/helpers/context/: context_processor.py
homebin/locations/: __init__.py  admin.py  apps.py  models.py  tables.py  urls.py  views.py  wizard.py
homebin/locations/migrations/: 0001_initial.py  0002_alter_containerattachment_options_and_more.py  0003_remove_container_attachments.py  0004_delete_containerattachment.py  0005_alter_container_container_description_and_more.py  0006_historicallocation_is_active_location_is_active.py  0007_container_is_active_historicalcontainer_is_active.py
homebin/locations/templates/locations/: container_detail.html  location_detail.html
homebin/locations/views/: __init__.py  all_views.py  container_views.py  location_views.py
homebin/templates/: 403_csrf.html  404.html  500.html  base.html  base_detail.html  base_list.html  iommi_base.html  iommi_base2.html  table_thumbnail.html
homebin/templates/cotton/: card.html  footer.html  messages.html  navbar.html
homebin/templates/cotton/layouts/: base.html
homebin/templates/pages/: home.html
homebin/users/: adapters.py  apps.py  models.py  urls.py  views.py
homebin/users/api/: serializers.py  views.py
homebin/users/migrations/: 0001_initial.py  0002_superusercreationflag.py
homebin/users/tests/: factories.py  test_admin.py  test_drf_urls.py  test_drf_views.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
requirements/: base.txt  local.txt  venv.txt
